yaml/netpol/5-allow-and-rules.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-and-rules
spec:
  podSelector:
    matchLabels:
      app: db
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: backend
      namespaceSelector:
        matchLabels:
          env: prod
    ports:
    - protocol: TCP
      port: 5432
