yaml/netpol/6-allow-or-logic.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-or-logic
spec:
  podSelector:
    matchLabels:
      app: api
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: admin
    - namespaceSelector:
        matchLabels:
          env: monitoring
    ports:
    - protocol: TCP
      port: 8080
