yaml/netpol/block-traffc.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: block-traffic
  namespace: staging
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress: []
