yaml/netpol/deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: production
spec:
  podSelector:
    matchLabels:
      app: secure
  policyTypes:
  - Ingress
