yaml/netpol/drill-2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-backend
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
  - Ingress
  ingress:
  - from:
    podSelector:
      matchLabels:
        app: frontend
    ports:
    - port: 8080
      protocol: TCP
