yaml/netpol/ingress-check.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ing-pol
spec:
  podSelector:
    matchLabels:
      app: frontend



  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend
    ports:
    - protocol: TCP
      port: 80
