yaml/netpol/internal-only.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: internal-only
  namespace: private
spec:
  podSelector:
    matchLabels:
      sensitivity: high
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          verified: true
      namespaceSelector:
        matchLabels:
          zone: trusted
    ports:
    - protocol: TCP
      port: 8080
