yaml/netpol/lockdown.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: lockdown
  namespace: secure
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress: []
