yaml/netpol/outbound-control.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: outbound-control
  namespace: workers
spec:
  podSelector:
    matchLabels:
      job: processor
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 10.200.0.0/16
    ports:
    - protocol: TCP
      port: 443
