yaml/netpol/service-mesh.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: service-mesh
  namespace: apps
spec:
  podSelector:
    matchLabels:
      layer: data
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          layer: service
    ports:
    - protocol: TCP
      port: 5000
